--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "lucide-react": "^0.555.0",
-    "@google/genai": "^1.30.0",
-    "react-dom": "^19.2.0",
-    "recharts": "^3.5.0",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
-    "react-markdown": "^9.0.1"
+    "react": "18.3.1",
+    "react-dom": "^19.2.1",
+    "lucide-react": "0.263.1",
+    "@google/genai": "0.1.1",
+    "recharts": "2.12.7",
+    "html2canvas": "1.4.1",
+    "jspdf": "2.5.1",
+    "react-markdown": "9.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
